--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@ SPDX-License-Identifier: MIT
 -->
 
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="cerberus">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
